<resources>
    <string name="app_name">Manga</string>
    <string name="aboutApp">About App</string>
    <string name="btnGetStarted">Get Started</string>
    <string name="firstDescription">Discover and read popular anime information in one place! Stay updated, explore various genres,
                                    and enjoy a seamless streaming experience. Your anime adventure starts here!</string>
    <string name="userName">Enter UserName</string>
    <string name="password">Enter Password</string>
    <string name="logIn">Log in</string>
    <string name="register">Registration</string>

    <string name="enterName">Enter Name</string>
    <string name="enterLastName">Enter LastName</string>
    <string name="createUserName">Create UserName</string>
    <string name="createPassword">Create Password</string>
    <string name="submitButton">Submit</string>
    <string name="goBackToMainButton">Back</string>

    <string name="verifiedMangaReader">Verified manga reader</string>
    <string name="accountLongOut">Long Out</string>

    <string-array name="fullNames">
        <item>Vampire Hunter D: Bloodlust</item>
        <item>Hellsing Ultimate</item>
        <item>Berserk</item>
        <item>Bleach</item>
        <item>One Piece</item>
    </string-array>

    <string-array name="lilDescriptions">
        <item>Billed by the Japanese producers as a "dark future science-fiction romance", the film, like the novel before it, is set in the year 12,090 AD, in a post-nuclear holocaust world where a young woman hires a mysterious half-vampire, half-human vampire hunter to protect her from a powerful vampire lord.</item>
        <item>Summaries. The vampire Alucard, his master Sir Integra Fairbrook Wingates Hellsing, and his newly sired ward Seras Victoria, try to protect England from a war-crazed SS-Major who seeks to start an eternal war with his vampire army.</item>
        <item>The series follows Guts\' journey seeking revenge on Griffith, who betrayed him and sacrificed his comrades to become a powerful demonic being. Miura premiered a prototype of Berserk in 1988.</item>
        <item>Bleach (stylized in all caps) is a Japanese manga series written and illustrated by Tite Kubo. It follows the adventures of a teenager Ichigo Kurosaki, who obtains the powers of a Soul Reaper—a death personification similar to a Grim Reaper—from another Soul Reaper, Rukia Kuchiki.</item>
        <item>ONE PIECE is a legendary high-seas quest unlike any other. Luffy is a young adventurer who has longed for a life of freedom ever since he can remember. He sets off from his small village on a perilous journey to find the legendary fabled treasure, ONE PIECE, to become King of the Pirates!</item>
    </string-array>

    <string name="n1" />
    <string name="n2" />
    <string name="n3" />
    <string name="n4" />
    <string name="mangaLine">TODO</string>
    <string name="todo">n5</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="t7">TODO</string>
    <string name="t8">TODO</string>
    <string name="t11">TODO</string>
    <string name="t13">TODO</string>
    <string name="t14">TODO</string>
    <string name="t15">TODO</string>
    <string name="t16">TODO</string>

</resources>