<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    >
    <ImageView
        android:id="@+id/slideImage"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:contentDescription="@string/n1"
        android:src="@drawable/luffy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wArrows"
        android:layout_below="@+id/slideImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        >

        <ImageView
            android:id="@+id/leftArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutApp"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:id="@+id/slideTextOne"
            />

        <ImageView
            android:id="@+id/rightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/firstDescription"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/wArrows"
        android:layout_marginTop="10dp"
        android:id="@+id/slideTextTwo"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slideTextTwo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/lnrLSlider"
        >
    <ImageView
        android:id="@+id/ind1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/n2"
        app:srcCompat="@drawable/selected" />

    <ImageView
        android:id="@+id/ind2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/n3"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/selected" />

    <ImageView
        android:id="@+id/ind3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/n4"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/selected" />

    </LinearLayout>
    
    <Button
        android:id="@+id/slideBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/btnGetStarted"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_below="@+id/lnrLSlider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        />

</RelativeLayout>