<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/animeImage"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/mangaLine"
        android:src="@mipmap/mainlogo" />

    <FrameLayout
        android:id="@+id/boxForUsPas"
        android:layout_width="390dp"
        android:layout_height="350dp"
        android:background="@drawable/glow"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/animeImage"
        android:layout_marginTop="-30dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginStart="28sp"
            android:layout_marginTop="30dp"
            android:id="@+id/usrErrMainWindow"
            android:textSize="20sp"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/etuserNm"
            android:layout_width="340dp"
            android:layout_height="66dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/userName"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:lines="1"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginStart="28sp"
            android:layout_marginTop="100dp"
            android:id="@+id/pasErrMainWindow"
            android:textSize="20sp"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="340dp"
            android:layout_height="65dp"
            android:layout_marginTop="110dp"
            android:layout_marginStart="25dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:lines="1"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="155dp"
            android:layout_height="70dp"
            android:text="@string/logIn"
            android:textSize="19sp"
            android:layout_marginStart="118dp"
            android:layout_marginTop="185dp"
            android:backgroundTint="@color/red"
            />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="155dp"
            android:layout_height="70dp"
            android:text="@string/register"
            android:textSize="19sp"
            android:layout_marginStart="118dp"
            android:layout_marginTop="255dp"
            android:backgroundTint="@color/red"
            />
    </FrameLayout>

</RelativeLayout>