<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:background="@drawable/glow"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/t8"
            android:src="@drawable/person"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/usernameSaver"
            android:layout_width="260dp"
            android:layout_height="34dp"
            android:layout_marginTop="43dp"
            android:layout_marginStart="65dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/t7"
            android:src="@drawable/verified"
            android:layout_marginTop="105dp"
            />
        <TextView
            android:id="@+id/verifiedMangaReader"
            android:layout_width="260dp"
            android:layout_height="34dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="65dp"
            android:textSize="25sp"
            android:text="@string/verifiedMangaReader"
            android:textColor="@color/white"
            />
        <ImageView
            android:id="@+id/exitAcc"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/t7"
            android:src="@drawable/exit"
            android:layout_marginTop="185dp"
            />
        <TextView
            android:layout_width="260dp"
            android:layout_height="34dp"
            android:layout_marginTop="198dp"
            android:layout_marginStart="67dp"
            android:textSize="25sp"
            android:text="@string/accountLongOut"
            android:textColor="@color/white"
            />

    </FrameLayout>

    <ImageView
        android:layout_width="230dp"
        android:layout_height="290dp"
        android:src="@mipmap/gojolongout"
        android:layout_marginTop="430dp"
        android:layout_marginStart="160dp"
        />

</FrameLayout>